2007-11-01  Zeeshan Ali Khan Khattak  <zeenix@gstreamer.net>

	* src/av-cp/xml-util.c:
	* src/av-cp/xml-util.h:

	Add a few xml utility functions.

2007-10-30  Zeeshan Ali Khan Khattak  <zeenix@gstreamer.net>

	* src/av-cp/didl-lite-object.c:
	* src/av-cp/didl-lite-object.h:

	Add didl_lite_object_get_value() on popular demand. :)

2007-10-28  Zeeshan Ali Khan Khattak  <zeenix@gstreamer.net>

	* src/av-cp/didl-lite-object.c:
	* src/av-cp/didl-lite-object.h:

	Instead of a gobject, provide an API to deal with the DIDL-Lite xml
	nodes. 

	* src/av-cp/didl-lite-parser.c:
	* src/av-cp/didl-lite-parser.h:
	* src/av-cp/media-server-proxy.c:
	* src/av-cp/av-cp-playlisttreeview.c:

	Use the new didl_lite_object API.

2007-10-23  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/av-cp-playlisttreeview.c:

	Assume the parent of a DIDL object to be root if it's "parentID" is
	not known to us already. This is to support the ContentDirectory
	implemenations (e.g Coherence) that assigns an id other than "0" to
	the root DIDL object.

2007-10-22  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/common/icons.c:

	- Only use a fallback icon if one is available.
	- Get rid of the ugly stock icon loading code and load all icons from
	  theme instead.

	* configure.ac:

	Require gnome-icon-theme (>= 2.20).

2007-10-22  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/common/icons.c:
	* src/common/icons.h:

	Add icons for audio, video, text and image items.

	* src/av-cp/av-cp-playlisttreeview.c:

	Use newly-addded icons for audio, video, text and image items.

2007-10-21  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/didl-lite-object.c:
	
	Use the upnp:class name of the DIDL-Lite object rather than the name
	of the it's xml element to determine it's generic class.

2007-10-21  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/didl-lite-object.c:
	* src/av-cp/didl-lite-object.h:

	Add a method to retreive the actual full string specifying the
	upnp:class of the DIDL-Lite object.
