@@ -40,19 +40,19 @@ char *
 didl_lite_object_get_parent_id           (xmlNode        *object_node);
 
 gboolean
+didl_lite_object_get_restricted          (xmlNode        *object_node);
+
+gboolean
 didl_lite_object_get_never_playable      (xmlNode        *object_node);
 
 char *
 didl_lite_object_get_title               (xmlNode        *object_node);
 
-char *
-didl_lite_object_get_desc_type           (xmlNode        *object_node);
+GList *
+didl_lite_object_get_descriptors         (xmlNode        *object_node);
 
-char *
-didl_lite_object_get_desc_name_space     (xmlNode        *object_node);
-
-char *
-didl_lite_object_get_desc_contents       (xmlNode        *object_node);
+GList *
+didl_lite_object_get_resources           (xmlNode        *object_node);
 
 gboolean
 didl_lite_object_is_container            (xmlNode        *object_node);
@@ -64,15 +64,59 @@ didl_lite_object_is_item                 (xmlNode        *object_node);
 gboolean
 didl_lite_container_is_searchable        (xmlNode        *container_node);
 
+guint
+didl_lite_container_get_child_count      (xmlNode        *container_node);
+
 /* DIDL-Lite item Object functions */
 char *
 didl_lite_item_get_ref_id                (xmlNode        *item_node);
 
+/* DIDL-Lite desc Object functions */
 char *
-didl_lite_item_get_protocol_info         (xmlNode        *item_node);
+didl_lite_descriptor_get_type            (xmlNode        *desc_node);
 
 char *
-didl_lite_item_get_duration              (xmlNode        *item_node);
+didl_lite_descriptor_get_name_space      (xmlNode        *desc_node);
+
+char *
+didl_lite_descriptor_get_contents        (xmlNode        *desc_node);
+
+/* DIDL-Lite res Object functions */
+char *
+didl_lite_resource_get_contents          (xmlNode        *res_node);
+
+char *
+didl_lite_resource_get_import_uri        (xmlNode        *res_node);
+
+char *
+didl_lite_resource_get_protocol_info     (xmlNode        *res_node);
+
+guint
+didl_lite_resource_get_size              (xmlNode        *res_node);
+
+char *
+didl_lite_resource_get_duration          (xmlNode        *res_node);
+
+guint
+didl_lite_resource_get_bitrate           (xmlNode        *res_node);
+
+guint
+didl_lite_resource_get_sample_frequency  (xmlNode        *res_node);
+
+guint
+didl_lite_resource_get_bits_per_sample   (xmlNode        *res_node);
+
+guint
+didl_lite_resource_get_nr_audio_channels (xmlNode        *res_node);
+
+char *
+didl_lite_resource_get_resolution        (xmlNode        *res_node);
+
+guint
+didl_lite_resource_get_color_depth       (xmlNode        *res_node);
+
+char *
+didl_lite_resource_get_protection        (xmlNode        *res_node);
 
 G_END_DECLS
 
